# taiwan_stock_crawler

./: .env.example  .gitignore  Dockerfile  Dockerfile.fastapi  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements-airflow.txt  requirements.txt
.github/workflows/: ci.yml
dags/: stock_crawler_dag.py
src/api/: main.py
src/crawler/: twse_crawler.py
src/database/: db_manager.py
terraform/: main.tf  outputs.tf  startup.sh  terraform.tfstate  terraform.tfstate.backup  variables.tf
tests/: test_crawler.py
